--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,14 +1,20 @@
+#Blocks
+#Environment
 block.decay-inter-decay-floor.name = Decay floor
 block.decay-inter-decay-floor.description = The dangerous floor on Decalin. Old materia can be mined from this floor
 block.decay-inter-decay-floor-wall.name = Decay floor wall
 block.decay-inter-decay-stone.name = Decay stone
 block.decay-inter-decay-stone-wall.name = Decay stone wall
+#Buildings
 block.decay-inter-core-dry.name = Core: Dry
 block.decay-inter-core-dry.description = The main core of Decalin. Can drill floor. When destroyed, the sector is lost
 block.decay-inter-core-dry.details = The first iteration of Decalin
 block.decay-inter-core-decay.name = Core: Decay
 block.decay-inter-core-decay.description = The advanced core of Decalin. Can better drill floor. When destroyed, the sector is lost
 block.decay-inter-core-decay.details = The second iteration of Decalin
+block.decay-inter-core-crystal.name = Core: Crystal
+block.decay-inter-core-crystal.description = The reinforced core of Decalin. Can even better drill floor. When destroyed, the sector is lost
+block.decay-inter-core-crystal.details = The final iteration of Decalin
 block.decay-inter-mover.name = Mover
 block.decay-inter-decay-sorter.name = Basic sorter
 block.decay-inter-light-link.name = Light link
@@ -46,6 +52,7 @@ block.decay-inter-time-factory.name = Time factory
 block.decay-inter-decay-assembler.name = Decay assembler
 block.decay-inter-time-assembler.name = Time assembler
 block.decay-inter-time-machine.name = Time machine
+#Items
 item.decay-inter-oldmateria.name = Old Materia
 item.decay-inter-oldmateria.description = The remaining material from process of decaying on Decalin
 item.decay-inter-decay-graphite.name = Decay graphite
@@ -59,7 +66,7 @@ item.decay-inter-vilinite-alloy.name = Vilinite Alloy
 item.decay-inter-vilinite-alloy.description = The basic alloy on Decalin. Have healing properties
 item.decay-inter-relite-plate.name = Relite plate
 item.decay-inter-relite-plate.description = The advanced alloy on Decalin. Used for experimental and advanced technologies
-item.decay-inter-tarite.name = Iod
+#Units
 unit.decay-inter-hour.name = Hour
 unit.decay-inter-hour.description = First tier of time units. Shoots the low threat time anomaly
 unit.decay-inter-hour.details = They are so annoying
@@ -78,15 +85,18 @@ unit.decay-inter-destroy.description = Third tier of decay units. Shoots the big
 unit.decay-inter-annihilate.name = Eradication
 unit.decay-inter-refate.name = Refate
 unit.decay-inter-refate.description = First tier of support decay units. Shoots the basic bullets. Have regeneration field
-unit.decay-inter-decray.name = Decray
+unit.decay-inter-decray.name = Corpse
 unit.decay-inter-decray.description = The defender of core: Dry. Shoots the homing bullets
-unit.decay-inter-melair.name = Melair
+unit.decay-inter-melair.name = Bones
 unit.decay-inter-melair.description = The defender of core: Decay. Shoots the helix missiles. Have the steal heath field
+unit.decay-inter-powder.name = Powder
+unit.decay-inter-powder.description = The defender of core: Crystal. Shoots the helix missiles. Have the steal heath field
 unit.decay-inter-time-entity.name = Star
 unit.decay-inter-pause.name = Pause
 unit.decay-inter-pause.description = Reinforcement version of elude on Decalin
 unit.decay-inter-resume.name = Resume
 unit.decay-inter-resume.description = Helicopter of time. Flying with plasma power
+#Statuses
 status.corroded.name = Corroded
 status.slow.name = Slow
 status.disarmed.name = Disarmed
@@ -98,6 +108,8 @@ status.decay-inter-time-swap2.name = Time swap ([cyan]Level 2[])
 status.decay-inter-time-swap3.name = Time swap ([cyan]Level 3[])
 status.decay-inter-time-stop.name = Time stop
 status.decay-inter-time-crack.name = Time crack
+status.decay-inter-suppression.name = Suppression
+#Sectors
 planet.decay-inter-decalin.name = Decalin
 planet.decay-inter-decalin.description = The planet that was destroyed by decay
 sector.decay-inter-forgot-land.name = Forgotten Land
@@ -111,6 +123,7 @@ sector.decay-inter-orbital-center.name = Orbital Center
 sector.decay-inter-orbital-center.description = The very armored base. Have the experimental turret: Omega Cannon.\nDestroy and get the new technologies
 sector.decay-inter-junkyard.name = Junkyard
 sector.decay-inter-junkyard.description = The abandoned and ruined mechanisms of decayed faction, but they are still working. Eradicate these mechanisms and research the incinerator
+#Other
 team.decayed.name = Decayed
 team.yellow.name = Yellow
 team.neoplastic.name = Neoplastic
