OH MY GOT!!! NEW COMMIT IN DEAD MOD

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -6,7 +6,7 @@ block.decay-inter-decay-floor-wall.name = Decay floor wall
 block.decay-inter-decay-stone.name = Decay stone
 block.decay-inter-decay-stone-wall.name = Decay stone wall
 #Buildings
-block.decay-inter-core-dry.name = Core: Dry
+block.decay-inter-core-dry.name = Core: "Dry"
 block.decay-inter-core-dry.description = The main core of Decalin. Can drill floor. When destroyed, the sector is lost
 block.decay-inter-core-dry.details = The first iteration of Decalin
 block.decay-inter-core-decay.name = Core: Decay
@@ -15,36 +15,39 @@ block.decay-inter-core-decay.details = The second iteration of Decalin
 block.decay-inter-core-crystal.name = Core: Crystal
 block.decay-inter-core-crystal.description = The reinforced core of Decalin. Can even better drill floor. When destroyed, the sector is lost
 block.decay-inter-core-crystal.details = The final iteration of Decalin
-block.decay-inter-mover.name = Mover
-block.decay-inter-decay-sorter.name = Basic sorter
-block.decay-inter-light-link.name = Light link
-block.decay-inter-medium-link.name = Medium link
-block.decay-inter-heavy-link.name = Heavy link
-block.decay-inter-decay-consider.name = Decay consider
-block.decay-inter-time-driver.name = Time driver
+block.decay-inter-mover.name = Fallen Duct
+block.decay-inter-decay-sorter.name = Fallen sorter
+block.decay-inter-light-link.name = Fallen Light link
+block.decay-inter-light-link.description = Transport items to other links. Act like router
+block.decay-inter-medium-link.name = Fallen Medium link
+block.decay-inter-heavy-link.name = Fallen Heavy link
+block.decay-inter-decay-consider.name = Decay Collector
+block.decay-inter-decay-consider.description = Generates power from floors, which has decaying properties
+block.decay-inter-time-driver.name = Wind-Time Engine
 block.decay-inter-wire.name = Wire
-block.decay-inter-large-wire.name = Large Wire
+block.decay-inter-wire.description = Transport power to buildings
 block.decay-inter-armored-wire.name = Armored Wire
-block.decay-inter-large-armored-wire.name = Large Armored Wire
 block.decay-inter-cluster.name = Cluster
-block.decay-inter-cluster.description = The first turret of Decalin. Shoots the triple bullets
+block.decay-inter-cluster.description = Shoots the triple homing bullets
 block.decay-inter-starflood.name = Star flood
 block.decay-inter-interleet.name = Collapse
 block.decay-inter-confronter.name = Confront
 block.decay-inter-missileter.name = Swarm
 block.decay-inter-crystal-fer.name = Rain Storm
-block.decay-inter-decalwall.name = Decay wall
-block.decay-inter-decalwall-large.name = Large Decay wall
+block.decay-inter-decalwall.name=Decay Wall
+block.decay-inter-decalwall-large.name=Large Decay Wall
 block.decay-inter-timewall.name = Time wall
 block.decay-inter-timewall-large.name = Large Time wall
 block.decay-inter-vilinite-wall.name = Vilinite wall
 block.decay-inter-vilinite-wall-large.name = Large Vilinite wall
 block.decay-inter-mirror-wall.name = Mirror wall
 block.decay-inter-driller.name = Driller
+block.decay-inter-driller.description = Drills soft materials from floors
 block.decay-inter-ore-Crusher.name = Ore Crusher
-block.decay-inter-changer.name = Changer
 block.decay-inter-repairer.name = Repairer
-block.decay-inter-repairer.description = Turn old materia into basics materials
+block.decay-inter-repairer.description = Transform old materia into other useful materials
+block.decay-inter-changer.name = Changer
+block.decay-inter-changer.description = Combine old materia and graphite to create decayed version of graphite
 block.decay-inter-viline-forge.name = Viline forge
 block.decay-inter-viline-forge.description = The forge of creation vilinite alloy with using graphite, silicon and time fragment
 block.decay-inter-decay-factory.name = Decay factory
@@ -54,12 +57,15 @@ block.decay-inter-time-assembler.name = Time assembler
 block.decay-inter-time-machine.name = Time machine
 #Items
 item.decay-inter-oldmateria.name = Old Materia
-item.decay-inter-oldmateria.description = The remaining material from process of decaying on Decalin
+item.decay-inter-oldmateria.description = The remaining material from process of decaying on Decalin. Used in most buildings and ammunition
+item.decay-inter-tellurium.name = Tellurium
+item.decay-inter-tellurium.description = Used in most buildings
+item.decay-inter-tellurium.details = One of survived material from Incident on Decalin
 item.decay-inter-decay-graphite.name = Decay graphite
 item.decay-inter-decay-graphite.description = The merged graphite and old materia. Used for advanced technologies
 item.decay-inter-time-fragment.name = Time fragment
-item.decay-inter-time-fragment.description = The fragment of time on Decalin. Unknown how this created
-item.decay-inter-time-fragment.details = When you look to him, you bring memories of old Decalin. [red]WHEN HE HASN'T BEEN DECAYED
+item.decay-inter-time-fragment.description = The fragment of time on Decalin. Used for basic time technologies
+item.decay-inter-time-fragment.details = When you look to him, you bring memories of old Decalin. [red]WHEN THAT INCIDENT HASN'T HAPPENED \nOn this moment they are not so bright how were they before
 item.decay-inter-time-essence.name = Time essence
 item.decay-inter-time-essence.description = The essence of time, created by combining of time fragments. Used for advanced time technologies
 item.decay-inter-vilinite-alloy.name = Vilinite Alloy
@@ -67,35 +73,40 @@ item.decay-inter-vilinite-alloy.description = The basic alloy on Decalin. Have h
 item.decay-inter-relite-plate.name = Relite plate
 item.decay-inter-relite-plate.description = The advanced alloy on Decalin. Used for experimental and advanced technologies
 #Units
-unit.decay-inter-hour.name = Hour
-unit.decay-inter-hour.description = First tier of time units. Shoots the low threat time anomaly
-unit.decay-inter-hour.details = They are so annoying
-unit.decay-inter-clock.name = Clock
-unit.decay-inter-clock.description = Second tier of time units. Shoots the medium threat time anomaly
-unit.decay-inter-timer.name = Timer
-unit.decay-inter-timer.description = Third tier of time units. Shoots the burst of bullets with low threat time anomaly
-unit.decay-inter-year.name = Year
-unit.decay-inter-year.description = The Final tier of time units. Shoots 2 mega lasers and medium threat time anomaly
-unit.decay-inter-clear.name = Clear
-unit.decay-inter-clear.description = First tier of decay units. Shoots the basics bullets. Have the decay field
-unit.decay-inter-remove.name = Remove
-unit.decay-inter-remove.description = Second tier of decay units. Shoots from 4 weapons the basics bullets. Have the decay field
-unit.decay-inter-destroy.name = Destroy
-unit.decay-inter-destroy.description = Third tier of decay units. Shoots the big artillery bullet. Have the decay field
-unit.decay-inter-annihilate.name = Eradication
-unit.decay-inter-refate.name = Refate
-unit.decay-inter-refate.description = First tier of support decay units. Shoots the basic bullets. Have regeneration field
 unit.decay-inter-decray.name = Corpse
-unit.decay-inter-decray.description = The defender of core: Dry. Shoots the homing bullets
+unit.decay-inter-decray.description = The defender of core: Dry. Fires the homing bullets
 unit.decay-inter-melair.name = Bones
-unit.decay-inter-melair.description = The defender of core: Decay. Shoots the helix missiles. Have the steal heath field
+unit.decay-inter-melair.description = The defender of core: Decay. Fires the helix missiles. Have the steal heath field
 unit.decay-inter-powder.name = Powder
-unit.decay-inter-powder.description = The defender of core: Crystal. Shoots the helix missiles. Have the steal heath field
-unit.decay-inter-time-entity.name = Star
+unit.decay-inter-powder.description = The defender of core: Crystal. Fires the high recoil impulse charge. Have more advanced engine than other units
+unit.decay-inter-hour.name = Hour
+unit.decay-inter-hour.description = First tier of time units. Fires the low threat time anomaly
+unit.decay-inter-hour.details = They are so annoying
+unit.decay-inter-clock.name = Day
+unit.decay-inter-clock.description = Second tier of time units. Fires the medium threat time anomaly
+unit.decay-inter-timer.name = Week
+unit.decay-inter-timer.description = Third tier of time units. Fires the burst of bullets with low threat time anomaly
+unit.decay-inter-day.name = Month
+unit.decay-inter-day.description = Fourth tier of time units. Fires the burst of bullets and laser charge
+unit.decay-inter-year.name = Year
+unit.decay-inter-year.description = The Final tier of time units. Fires 2 mega lasers and medium threat time anomaly
 unit.decay-inter-pause.name = Pause
 unit.decay-inter-pause.description = Reinforcement version of elude on Decalin
 unit.decay-inter-resume.name = Resume
 unit.decay-inter-resume.description = Helicopter of time. Flying with plasma power
+unit.decay-inter-clear.name = Clear
+unit.decay-inter-clear.description = First tier of decay units. Fires the basics bullets. Have the decay field
+unit.decay-inter-remove.name = Remove
+unit.decay-inter-remove.description = Second tier of decay units. Fires from 4 weapons the basics bullets. Have the decay field
+unit.decay-inter-destroy.name = Destroy
+unit.decay-inter-destroy.description = Third tier of decay units. Fires the big artillery bullet. Have the decay field
+unit.decay-inter-obliterate.name = Obliterate
+unit.decay-inter-obliterate.description = Fourth tier of decay units. //TODO
+unit.decay-inter-annihilate.name = Eradication
+unit.decay-inter-refate.name = Refate
+unit.decay-inter-refate.description = First tier of support decay units. Fires the basic bullets. Have regeneration field
+unit.decay-inter-time-entity.name = Star
+
 #Statuses
 status.corroded.name = Corroded
 status.slow.name = Slow
@@ -107,13 +118,14 @@ status.decay-inter-time-swap1.name = Time swap ([cyan]Level 1[])
 status.decay-inter-time-swap2.name = Time swap ([cyan]Level 2[])
 status.decay-inter-time-swap3.name = Time swap ([cyan]Level 3[])
 status.decay-inter-time-stop.name = Time stop
-status.decay-inter-time-crack.name = Time crack
+status.decay-inter-time-crack.name = Time break
+status.decay-inter-another-timeline.name = Another timeline
 status.decay-inter-suppression.name = Suppression
 #Sectors
 planet.decay-inter-decalin.name = Decalin
 planet.decay-inter-decalin.description = The planet that was destroyed by decay
-sector.decay-inter-forgot-land.name = Forgotten Land
-sector.decay-inter-forgot-land.description = The first sector of Decalin. Explore this area and destroy the scout units of unknown faction
+sector.decay-inter-old-place.name = Old Place
+sector.decay-inter-old-place.description = The ruins of past defence located in this sector. Explore this area and destroy the scout units of unknown faction
 sector.decay-inter-secture-base.name = Secture base
 sector.decay-inter-secture-base.description = Now the enemy know about us landing on this planet. It's time to attack the one of them base and steal their technologies
 sector.decay-inter-repair-terminal.name = Repair Terminal
@@ -127,11 +139,12 @@ sector.decay-inter-junkyard.description = The abandoned and ruined mechanisms of
 team.decayed.name = Decayed
 team.yellow.name = Yellow
 team.neoplastic.name = Neoplastic
-ability.decayfield = Decay Field [accent]{0}[] Range [accent]{1}[] Damage
-ability.stealfield = Steal Health Field [accent]{0}[] Range [accent]{1}[] Damage [accent]{2}[] Stolen health
+ability.decayfield = Decay Field
+ability.stealfield = Vampirizm Field
 ability.regenfield = Regen Field [accent]{0}[] Range [accent]{1}[] Heal amount
 techtree.decalin = Decalin
 stat.repairchance = Repair chance
 stat.healamount = Repair amount
 stat.mirrorchance = Mirror chance
 requirement.activate = Activate {0}
+requirement.denied = Access Denied
